--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <h1>Let's Play Ping Pong!</h1>
-      <form>
+      <form id="pingpong">
         <div class="form-group">
           <label for="number">Please enter a number</label>
           <input id="number" class="form-control" type="number">
